--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
         "@emotion/styled": "^11.11.5",
         "@mui/icons-material": "^5.15.20",
         "@mui/material": "^5.15.20",
+        "@mui/x-date-pickers": "^7.9.0",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "ajv": "^8.14.0",
         "axios": "^1.7.2",
+        "dayjs": "^1.11.11",
+        "moment": "^2.30.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-query": "^3.39.3",
